--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <h1>
-  Hello World dsdfsfdsd
-  sdfsdfs
+  Giới thiệu bản thân
 </h1>
+
+<ul>
+  <li>Họ tên: Hồ Công Trứ</li>
+  <li>Ngày sinh: 17/05/1995</li>
+  <li>Địa chỉ: Đống Đa, Hà Nội</li>
+</ul>
